--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,9 @@ jobs:
           submodules: recursive
           fetch-depth: 0
 
+      - name: Install dependencies
+        run: sudo apt-get update && sudo apt-get install -yq libboost1.83-dev xz-utils
+
       - name: Create build dir
         run: mkdir -p build
       
