--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
           fetch-depth: 0
 
       - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -yq libboost-all-dev xz-utils libbz2-dev libzstd-dev libbz2-dev
+        run: sudo apt-get update && sudo apt-get install -yq libboost-all-dev xz-utils libbz2-dev libzstd-dev libz3-dev
 
       - name: Create build dir
         run: mkdir -p build
