Allow boost's libs to be statically linked

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -166,8 +166,7 @@ if(NOT Boost_VERSION_MACRO)
 	set(Boost_VERSION_MACRO ${Boost_VERSION})
 endif()
 
-has_static_libs(Boost Boost_LIBRARIES)
-if(Boost_HAS_STATIC_LIBS)
+if(Boost_USE_STATIC_LIBS)
 	foreach(Lib IN ITEMS ZLIB BZip2)
 		string(TOUPPER ${Lib} LIB)
 		string(TOLOWER ${Lib} lib)
